# pixelisation

./: .env  AGENTS.md  CLAUDE.md  DOCUMENTATION.md  GEMINI.md  README.md  index.html  lint-output.txt  lint_results.txt  newone.md  newplan.md  package-lock.json  package.json  tailwind.config.ts  transform.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: health.py  reveal.py  router.py
backend/app/models/: enums.py  manifest.py  request.py  response.py
backend/app/pipeline/: context.py  dedication.py  glitter_zones.py  orchestrator.py  stage_01_load.py  stage_02_segment.py  stage_03_features.py  stage_04_reveal_mask.py  stage_05_hair.py  stage_06_cleanup.py  stage_07_quality.py  stage_08_vectorize.py  stage_09_export.py
backend/app/services/: face_landmarks.py  job_manager.py  segmenter.py  storage.py
backend/app/utils/: contours.py  fonts.py  image.py  pdf.py  svg.py
backend/tests/: conftest.py  test_api_reveal.py  test_dedication.py  test_glitter_zones.py  test_manifest.py  test_stage_01_load.py  test_stage_02_segment.py  test_stage_04_reveal_mask.py  test_stage_06_cleanup.py  test_stage_07_quality.py  test_stage_08_vectorize.py
src/: App.tsx  index.css  main.tsx
src/components/: CropScreen.tsx  GridViewer.tsx  ProcessingScreen.tsx  ResultsScreen.tsx  StencilViewer.tsx  UploadZone.tsx
src/hooks/: useScrollReveal.ts
src/i18n/: ar.ts  fr.ts  index.ts
supabase/: config.toml
tmp/: testOrganicSpeed.js
(+125 files in other folders)
